fix problem with text on solution control on small screens

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -367,23 +367,23 @@ table.diff tbody th {
 }
 
 .reset-btn {
-	width: 20%;
+	width: 25%;
 	margin-left: 0 !important;
 	float: right !important;
 }
 
 .hints-btn {
-	width: 20%;
+	width: 25%;
 	margin-left: 0 !important;
 }
 
 .giveup-btn {
-	width: 20%;
+	width: 25%;
 	margin-left: 0 !important;
 }
 
 .run-solution-button {
-	width: 40%;
+	width: 25%;
 	margin-bottom: 10px;
 	margin-left: 0 !important;
 }
